Adding Services pages to navigation

--- a/services/index.html
+++ b/services/index.html
@@ -1,80 +1,90 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <title>Services :: Herbert West Landscaping</title>
-    <link rel="stylesheet" href="/css/main-no-bs.css">
-    <script src="/js/include.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Services :: Herbert West Landscaping</title>
+  <link rel="stylesheet" href="/css/main-no-bs.css">
+  <script src="/js/include.js"></script>
+</head>
 
-  <body>
-    <header>
-      <a href="/"><img src="/images/hwl-logo.svg" alt="HWL green text with green vine off left of H" width="115" height="30"></a>
-      <nav aria-label="primary">
-        <ul>
-          <li><a href="/services/">Services</a></li>
-          <li><a href="/projects/">Projects</a></li>
-          <li><a href="/products/">Products</a></li>
-          <li><a href="/tips/">Tips</a></li>
-          <li><a href="/contact/">Contact</a></li>
-        </ul>
-      </nav>
+<body>
+  <header>
+    <a href="/"><img src="/images/hwl-logo.svg" alt="HWL green text with green vine off left of H" width="115"
+        height="30"></a>
+    <nav aria-label="primary">
+      <ul>
+        <li><a href="/services/">Services</a></li>
+        <li><a href="/projects/">Projects</a></li>
+        <li><a href="/products/">Products</a></li>
+        <li><a href="/tips/">Tips</a></li>
+        <li><a href="/contact/">Contact</a></li>
+      </ul>
+    </nav>
 
-      <nav aria-label="breadcrumb">
-        <ol>
-          <li><a href="/">Home</a></li>
-          <li>Services</li>
-        </ol>
-      </nav>
-    </header>
+    <nav aria-label="breadcrumb">
+      <ol>
+        <li><a href="/">Home</a></li>
+        <li>Services</li>
+        <li><a href="/services/seasonal.html">Seasonal</a></li>
+        <li><a href="/services/landscape-maintenance.html">Landscape Maintenance</a></li>
+        <li><a href="/services/custom-services.html">Custom Services</a></li>
+      </ol>
+    </nav>
+  </header>
 
-    <main>
+  <main>
 
-      <h1>
-        Find Out What We Can Do For You
-      </h1>
+    <h1>
+      Find Out What We Can Do For You
+    </h1>
 
-      <img src="/images/services/services.webp" alt="Colorful flower garden with a water fountain and a tall bush" width="800" height="160" srcset="">
+    <img src="/images/services/services.webp" alt="Colorful flower garden with a water fountain and a tall bush"
+      width="800" height="160" srcset="">
 
-      <h2>
-        Let’s make your lawn look great, eh?
-      </h2>
+    <h2>
+      Let’s make your lawn look great, eh?
+    </h2>
 
-      <img src="/images/services/maintenance-full.webp" alt="Half lawn mower on top half of picture" width="800" height="450" srcset="">
+    <img src="/images/services/maintenance-full.webp" alt="Half lawn mower on top half of picture" width="800"
+      height="450" srcset="">
 
-      <h3>
-        Landscape Maintenance
-      </h3>
+    <h3>
+      Landscape Maintenance
+    </h3>
 
-      <p>
-        We got your weekly lawn service, we got your fertilizer, we got your super duper nice sod, we got your dog poo … wait a sec, we don’t have that, we remove that. Mostly.
-      </p>
+    <p>
+      We got your weekly lawn service, we got your fertilizer, we got your super duper nice sod, we got your dog poo …
+      wait a sec, we don’t have that, we remove that. Mostly.
+    </p>
 
-      <img src="/images/services/seasonal-full.webp" alt="Pile of warm tone autumn leaves" width="800" height="450" srcset="">
+    <img src="/images/services/seasonal-full.webp" alt="Pile of warm tone autumn leaves" width="800" height="450"
+      srcset="">
 
-      <h3>
-        Seasonal
-      </h3>
+    <h3>
+      Seasonal
+    </h3>
 
-      <p>
-        ’Tis the season! Learn to de-thatch while avoiding Hellmouths, properly respect Rlim Shaikorth, The White Worm, revitalize your lawn, and plow snow while Earl leaves presents.
-      </p>
+    <p>
+      ’Tis the season! Learn to de-thatch while avoiding Hellmouths, properly respect Rlim Shaikorth, The White Worm,
+      revitalize your lawn, and plow snow while Earl leaves presents.
+    </p>
 
-      <img src="/images/services/custom-full.webp" alt="Long driveway lanscape" width="800" height="450" srcset="">
+    <img src="/images/services/custom-full.webp" alt="Long driveway lanscape" width="800" height="450" srcset="">
 
-      <h3>
-        Custom Services
-      </h3>
+    <h3>
+      Custom Services
+    </h3>
 
-      <p>
-        We aren’t like Steve’s Landscaping. Steve is boring and repetitive. Cut grass, plant flowers, blah blah blah. Yaaaawn. We are special and unique in everything we do. Death to Steve’s Landscaping!
-      </p>
-    </main>
+    <p>
+      We aren’t like Steve’s Landscaping. Steve is boring and repetitive. Cut grass, plant flowers, blah blah blah.
+      Yaaaawn. We are special and unique in everything we do. Death to Steve’s Landscaping!
+    </p>
+  </main>
 
-    <script>
-      includeHTML('/includes/footer-no-bs.html', 'main');
-    </script>
-  </body>
+  <script>
+    includeHTML('/includes/footer-no-bs.html', 'main');
+  </script>
+</body>
 
 </html>
