--- a/services/seasonal.html
+++ b/services/seasonal.html
@@ -1,107 +1,142 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <title>Seasonal Services :: Herbert West Landscaping</title>
-    <link rel="stylesheet" href="/css/main-no-bs.css">
-    <script src="/js/include.js"></script>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Seasonal Services :: Herbert West Landscaping</title>
+  <link rel="stylesheet" href="/css/main-no-bs.css">
+  <script src="/js/include.js"></script>
+</head>
 
-  <body>
+<body>
 
-    <header>
-      <nav aria-label="primary">
-        <a href="/"><img src="/images/hwl-logo.svg" alt="HWL green text with green vine off left of H" width="115" height="30"></a>
-        <ul>
-          <li><a href="/services/">Services</a></li>
-          <li><a href="/projects/">Projects</a></li>
-          <li><a href="/products/">Products</a></li>
-          <li><a href="/tips/">Tips</a></li>
-          <li><a href="/contact/">Contact</a></li>
-        </ul>
-      </nav>
-      <nav aria-label="breadcrumb">
-        <ol>
-          <li><a href="/">Home</a></li>
-          <li><a href="/services/">Services</a></li>
-          <li>Seasonal</li>
-        </ol>
-      </nav>
-    </header>
+  <header>
+    <nav aria-label="primary">
+      <a href="/"><img src="/images/hwl-logo.svg" alt="HWL green text with green vine off left of H" width="115"
+          height="30"></a>
+      <ul>
+        <li><a href="/services/">Services</a></li>
+        <li><a href="/projects/">Projects</a></li>
+        <li><a href="/products/">Products</a></li>
+        <li><a href="/tips/">Tips</a></li>
+        <li><a href="/contact/">Contact</a></li>
+      </ul>
+    </nav>
+    <nav aria-label="breadcrumb">
+      <ol>
+        <li><a href="/">Home</a></li>
+        <li><a href="/services/">Services</a></li>
+        <li>Seasonal</li>
+        <li><a href="/services/landscape-maintenance.html">Landscape Maintenance</a></li>
+        <li><a href="/services/custom-services.html">Custom Services</a></li>
 
-    <main>
-      <h1>Anhh, this blizzard is nothin’ compared to ’93</h1>
+      </ol>
+    </nav>
+  </header>
 
-      <img src="/images/services/seasonal.webp" alt="pile of fallen autumn leaves" width="800" height="160" srcset="">
+  <main>
+    <h1>Anhh, this blizzard is nothin’ compared to ’93</h1>
 
-      <h2>When it starts gettin’ cold, we’re there to help</h2>
+    <img src="/images/services/seasonal.webp" alt="pile of fallen autumn leaves" width="800" height="160" srcset="">
 
-      <h3>Spring/Fall Cleanup</h3>
+    <h2>When it starts gettin’ cold, we’re there to help</h2>
 
+    <h3>Spring/Fall Cleanup</h3>
+
+    <p>
+      We’ll come through your whole property, blow all the leaves out of your garden bed, cut down any perennials,
+      remove any plant foliage and waste from your property, and then throw it into Gordon’s yard next door. Your
+      property will be clean and ready to begin the season!
+    </p>
+
+    <h3>De-Thatching</h3>
+
+    <p>
+      <i>Thatch</i> is the build-up of plant material between green growth and the grass roots caused by rampaging
+      hordes of Shub-Nigguraths. Some thatch is essential, but too much can deter healthy lawn growth. The best time to
+      de-thatch your lawn is just before the full moon shines on the 3rd Thursday of every month, because after that,
+      you are <em>screwed</em>.
+    </p>
+
+    <p>
+      The best time to de-thatch a cool season lawn is late August to early October, unless you live near a Hellmouth,
+      in which case it should be late September to early November, or unless your house has an odd-numbered address, in
+      which case it should be mid-July to some time in the the last third of October. If you live in an odd-numbered
+      address near a Hellmouth, however, you are <em>screwed</em>.
+    </p>
+
+    <p>
+      Oh, & if you notice that your thatch is either bleeding or screaming in agony, you should be aware that you are
+      <em>screwed</em>.
+    </p>
+
+    <p>
+      In all other situations we would be glad to help you!
+    </p>
+
+    <h3>White Worm Control</h3>
+
+    <p>
+      Spawn of Rlim Shaikorth, The White Worm, live underground, usually 6" to a few feet down and eat anything that is
+      foolish enough to lay on the ground for more than three minutes. If your lawn has been chosen by Rlim Shaikorth as
+      a spawning ground for his latest batch of children, there is good news and bad news.
+    </p>
+
+    <p>
+      The good news is that you will not have to worry about the Japanese Beetle, June Beetle, May Beetle, Paul Beetle,
+      Northern Oklahoma Potato Patch Beetle, Boll Weevil (or <a
+        href="https://www.youtube.com/watch?v=aR55wJggZtg">Weevil Wovvles</a>), George Beetle, Coconut Beetle, Mountain
+      Pine Beetle, Ringo Beetle, Yiddish Beetle, <a
+        href="https://www.straightdope.com/21343129/yiddish-shmiddish-why-do-we-repeat-a-word-but-start-it-with-shm">Shmiddish
+        Beetle</a>, Hercules Beetle, Titanic Beetle, or John Beetle. Pretty much any beetle, actually. The bad news is
+      that you are probably infected by one of the spawn of Rlim Shaikorth and will die a hideous yet glorious death
+      that honors The White Worm. Lucky you!
+    </p>
+
+    <aside>
       <p>
-        We’ll come through your whole property, blow all the leaves out of your garden bed, cut down any perennials, remove any plant foliage and waste from your property, and then throw it into Gordon’s yard next door. Your property will be clean and ready to begin the season!
+        Grass gets tired, so, so tired. It needs to be revitalized every few years.
       </p>
+    </aside>
 
-      <h3>De-Thatching</h3>
+    <h3>Revitalization</h3>
 
-      <p>
-        <i>Thatch</i> is the build-up of plant material between green growth and the grass roots caused by rampaging hordes of Shub-Nigguraths. Some thatch is essential, but too much can deter healthy lawn growth. The best time to de-thatch your lawn is just before the full moon shines on the 3rd Thursday of every month, because after that, you are <em>screwed</em>.
-      </p>
+    <p>
+      Gardeners assume that fertilizer is all that is needed to keep a turf happy. That is a crazy idea. Grass gets
+      tired, so, so tired. It needs to be revitalized every few years. Take your grass on a special date with you, maybe
+      a day trip over to the gun and boat show out there on 91 over by Emmet’s barn, and then, afterward, to a romantic
+      dinner over at Ed & Earl’s Boutique o’ Food, but only on nights Earl’s not doing the cooking.
+    </p>
 
-      <p>
-        The best time to de-thatch a cool season lawn is late August to early October, unless you live near a Hellmouth, in which case it should be late September to early November, or unless your house has an odd-numbered address, in which case it should be mid-July to some time in the the last third of October. If you live in an odd-numbered address near a Hellmouth, however, you are <em>screwed</em>.
-      </p>
+    <p>
+      While you’re on that date, feed your grass. Give it seed, lots of seed. Tell it how beautiful it looks as you
+      ladle seed onto it, softly, gently, lovingly. Caress it with your fingers and let it know that it’s the only lawn
+      you’ve every loved, and that you’ll never ever ever leave it for another. Buy the best Canadian beer and share a
+      special drink in the glow of a few candles, just the two of you, as you revitalize and renew that lawn and your
+      special relationship with it.
+    </p>
 
-      <p>
-        Oh, & if you notice that your thatch is either bleeding or screaming in agony, you should be aware that you are <em>screwed</em>.
-      </p>
+    <p>
+      Afterward, drive it back home and lay it down. Spend a few minutes with it in the moonlight and tell it that it’s
+      never looked more beautiful. Give it one last kiss good night, but keep your mouth closed, because otherwise you
+      could accidentally let one of the Spawn of Rlim Shaikorth, The White Worm, wriggle on in there and that could lead
+      to an STI (Supernaturally Transmitted Infestation).
+    </p>
 
-      <p>
-        In all other situations we would be glad to help you!
-      </p>
+    <h3>Snow Plowing</h3>
 
-      <h3>White Worm Control</h3>
+    <p>
+      Our fleet of trucks, driven by Earl, are ready to service your property. We service both residential and
+      commercial properties, but not caves or temples. We service your property once 29" of snow accumulates and
+      maintain it nice and clean throughout the winter season. In addition, Earl will leave presents behind under the
+      snow for you to discover during the spring thaw!
+    </p>
+  </main>
 
-      <p>
-        Spawn of Rlim Shaikorth, The White Worm, live underground, usually 6" to a few feet down and eat anything that is foolish enough to lay on the ground for more than three minutes. If your lawn has been chosen by Rlim Shaikorth as a spawning ground for his latest batch of children, there is good news and bad news.
-      </p>
+  <script>
+    includeHTML('/includes/footer-no-bs.html', 'main');
+  </script>
 
-      <p>
-        The good news is that you will not have to worry about the Japanese Beetle, June Beetle, May Beetle, Paul Beetle, Northern Oklahoma Potato Patch Beetle, Boll Weevil (or <a href="https://www.youtube.com/watch?v=aR55wJggZtg">Weevil Wovvles</a>), George Beetle, Coconut Beetle, Mountain Pine Beetle, Ringo Beetle, Yiddish Beetle, <a href="https://www.straightdope.com/21343129/yiddish-shmiddish-why-do-we-repeat-a-word-but-start-it-with-shm">Shmiddish Beetle</a>, Hercules Beetle, Titanic Beetle, or John Beetle. Pretty much any beetle, actually. The bad news is that you are probably infected by one of the spawn of Rlim Shaikorth and will die a hideous yet glorious death that honors The White Worm. Lucky you!
-      </p>
-
-      <aside>
-        <p>
-          Grass gets tired, so, so tired. It needs to be revitalized every few years.
-        </p>
-      </aside>
-
-      <h3>Revitalization</h3>
-
-      <p>
-        Gardeners assume that fertilizer is all that is needed to keep a turf happy. That is a crazy idea. Grass gets tired, so, so tired. It needs to be revitalized every few years. Take your grass on a special date with you, maybe a day trip over to the gun and boat show out there on 91 over by Emmet’s barn, and then, afterward, to a romantic dinner over at Ed & Earl’s Boutique o’ Food, but only on nights Earl’s not doing the cooking.
-      </p>
-
-      <p>
-        While you’re on that date, feed your grass. Give it seed, lots of seed. Tell it how beautiful it looks as you ladle seed onto it, softly, gently, lovingly. Caress it with your fingers and let it know that it’s the only lawn you’ve every loved, and that you’ll never ever ever leave it for another. Buy the best Canadian beer and share a special drink in the glow of a few candles, just the two of you, as you revitalize and renew that lawn and your special relationship with it.
-      </p>
-
-      <p>
-        Afterward, drive it back home and lay it down. Spend a few minutes with it in the moonlight and tell it that it’s never looked more beautiful. Give it one last kiss good night, but keep your mouth closed, because otherwise you could accidentally let one of the Spawn of Rlim Shaikorth, The White Worm, wriggle on in there and that could lead to an STI (Supernaturally Transmitted Infestation).
-      </p>
-
-      <h3>Snow Plowing</h3>
-
-      <p>
-        Our fleet of trucks, driven by Earl, are ready to service your property. We service both residential and commercial properties, but not caves or temples. We service your property once 29" of snow accumulates and maintain it nice and clean throughout the winter season. In addition, Earl will leave presents behind under the snow for you to discover during the spring thaw!
-      </p>
-    </main>
-
-    <script>
-      includeHTML('/includes/footer-no-bs.html', 'main');
-    </script>
-
-  </body>
+</body>
 
 </html>
